--- a/core/Dockerfile
+++ b/core/Dockerfile
@@ -1,24 +1,16 @@
 # syntax=docker/dockerfile:1
 
-FROM golang:1.24-alpine AS build
-
-# Set destination for COPY
+FROM oven/bun:1 AS base
 WORKDIR /app
 
-# Download any Go modules
-COPY container_src/go.mod ./
-RUN go mod download
+# Install dependencies
+COPY container_src/package.json container_src/tsconfig.json ./
+RUN bun install --frozen-lockfile
 
-# Copy container source code
-COPY container_src/*.go ./
+# Copy source code
+COPY container_src/src ./src
 
-# Build
-RUN CGO_ENABLED=0 GOOS=linux go build -o /server
-
-FROM scratch
-COPY --from=build /etc/ssl/certs/ca-certificates.crt /etc/ssl/certs/
-COPY --from=build /server /server
 EXPOSE 8080
 
-# Run
-CMD ["/server"]
+# Run with Bun (native TypeScript support)
+CMD ["bun", "run", "src/server.ts"]
